26. Mar 2012 Christoph Thielecke <crissi99@gmx.de>
	- strip useless trailing slash from selected path on adddialog
	- set last dir name as media name if type is not cd/dvd
	- ask for new media name if media already exists instead of show error message

25. Mar 2012 Christoph Thielecke <crissi99@gmx.de>
	- use real regex instead simple wildcard at exclude rules
	- use listview instead lineedit for exclude rules

24. Mar 2012 Christoph Thielecke <crissi99@gmx.de>
	- exclude rules are checked against file path instead file name
	- exclude rules now checked against directory path too

19. Mar 2012 Christoph Thielecke <crissi99@gmx.de>
	- q3table replaced by qtablewidget

18. Mar 2012 Christoph Thielecke <crissi99@gmx.de>
	- q3popmenu with qmenu replaced at mainwidget, guibase, borrowdialog
	- q3cstring removed
	- q3textbrowser replaced by qtextbrowser
	- display content file pattern info if deabug info is enabled
	- q3frame replaced by qframe
	- q3whatsthis removed
	- q3strlist replaced by qstringlist

17. Mar 2012 Christoph Thielecke <crissi99@gmx.de>
	- handle files larger than 1tb fixed
	- use double instead float internally
	- tb size unit on find dialog added
	- searching file size on finddialog fixed
	- selreadable dialog reworked
	- config dialog reworked
	- exclude file support added (regex, filename)
	- display busy cursor on open catalog from history menu
	- applying missing db settings on rescan event added
	- applying missing db settings on open hitstory event added
	- find entries to new find menu entry moved
	- use qstring instead of char string for compare at pos() on pos dialog

09. Mar 2012 Christoph Thielecke <crissi99@gmx.de>
	- option for display file content with external viewer added (#982070)
	- display result progress/count on find dialog table label added (#3496359)
	- use qpushbutton instead of painted button for cancel at progressdialog
	- cancel loading catalog fixed
	- cancel searching fixed
	- display more error messages on console