@@ -2,6 +2,7 @@
 	- strip useless trailing slash from selected path on adddialog
 	- set last dir name as media name if type is not cd/dvd
 	- ask for new media name if media already exists instead of show error message
+	- exclude match fixed
 
 25. Mar 2012 Christoph Thielecke <crissi99@gmx.de>
 	- use real regex instead simple wildcard at exclude rules
